# practice_mode

./: main.py  pyproject.toml  requirements.txt  test.ipynb
