[project]
name = "practice-mode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "langsmith>=0.4.8",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]
